# Themis

./: README.md
attacks/: generate_attack_traffic.sh
attacks/composite/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  utils.py
attacks/single/: bad_acknum_data.py  bad_acknum_rstack.py  bad_checksum_data.py  bad_checksum_rst.py  bad_flags_data.py  bad_seqnum_data.py  bad_seqnum_fin.py  bad_seqnum_rst.py  bad_timestamp_data.py  bad_timestamp_rst.py  big_gap.py  data_in_closing_states.py  data_overlapping.py  dataofs_large_data.py  dataofs_small_data.py  in_window_fin.py  in_window_rst.py  in_window_syn.py  md5_data.py  md5_rst.py  multi_segmentation.py  multiple_syn.py  no_ack_flag_data.py  no_ack_flag_fin.py  partial_in_window_rst.py  rst_after_fin.py  rst_rightmost_sack.py  seq_before_isn.py  small_segments.py  syn_data.py  syn_data2.py  syn_fin.py  tcb_turnaround.py  time_gap.py  urgent_data.py  utils.py
effectiveness/: run_tests.sh
offline/: README.md
offline/MyPlugins/: DFSSearcher.cpp  DFSSearcher.h  Edge.h  MemRangeDetector.cpp  MemRangeDetector.h  MyExecutionMonitor.cpp  MyExecutionMonitor.h  MyForkLimiter.cpp  MyForkLimiter.h  MyLuaFunctionInstrumentation.cpp  MyLuaFunctionInstrumentation.h  MyTracer.cpp  MyTracer.h  MyVariables.cpp  MyVariables.h  PathMerger.cpp  PathMerger.h  README.md  SymTCP.cpp  SymTCP.h
offline/docs/: finding_discrepancies.md  s2e_env_setup.md
offline/patches/: qemu-with-state-merging.patch  s2e-with-state-merging.patch
offline/projects/: kernel44.tar.xz  kernel54.tar.xz
offline/scripts/: compare_results.py  compare_z3_trace.py  create-snapshot.sh  extract_execution_trace.py  extract_symbolic_branch_trace.py  get_concrete_examples.py  get_max_state_id.sh  get_mem_range.py  local_http_server.py  packet_sender.py  profile_forking.sh  run-vm-raw.sh  run_all_tcp_opts.sh  setup_qemubr0.sh  z3differ.py  z3solver.py
pcaps/composite/: 1.pcap  2.pcap  (+14 more)
perf/: eval_ambi_overhead.py  eval_perf.py  run_batch_perf_tests.sh
robust-zeek/auxil/zeekctl/auxil/capstats/: CHANGES  CMakeLists.txt  INSTALL  Makefile  README  capstats.8  capstats.cc  config.h.in  configure  version.cc.in
scripts/: check_dataset.py
(+95 files in other folders)
